apps/wallabag/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wallabag
  labels:
    app: wallabag
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wallabag
  template:
    metadata:
      labels:
        app: wallabag
    spec:
      containers:
        - name: wallabag
          image: wallabag/wallabag:2.6.14
          ports:
            - containerPort: 80
          volumeMounts:
            - name: data
              mountPath: /var/www/wallabag/data
            - name: images
              mountPath: /var/www/wallabag/web/assets/images
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: wallabag-data
        - name: images
          persistentVolumeClaim:
            claimName: wallabag-images
