apps/wallabag/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: wallabag
spec:
  selector:
    app: wallabag
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
