apps/wallabag/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: wallabag
spec:
  hostnames:
    - wallabag.g2net.xyz
  parentRefs:
    - name: cilium-shared-gateway
      namespace: kube-system
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: wallabag
          port: 80
